# CBC_FiniteSensor_Models

./: AS_laser_array_implementation.py  LaserArray_math.ipynb  Paper_implement.py  Python_useful_cmd.md  Python_useful_cmd.txt  Sensor-Model_implement_1.py  Sensor-Placement_implement_2.py  Sensor-Placement_implement_3.py  Sensor-Placement_implemnet_1.py  pyproject.toml
CBC_FiniteSensor_Models.egg-info/: SOURCES.txt
sim_test/: Test1_15Jan25.py  Test1_parameters.py
src/: beam_prop_funs.py  nearfield_setupfuns.py  optimization_funs.py  sensor_models.py
